adding answer swagger remifications
