# storage/api-docs/api-docs.json
@@ -29,6 +29,13 @@
                         "type": "string"
                     },
                     {
+                        "name": "answer ",
+                        "in": "path",
+                        "description": "answer for question",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "name": "Authorization",
                         "in": "header",
                         "description": "Bearer TOKEN",
